<resources>
    <string name="app_name">PDiary</string>
    <string name="username">User name</string>
    <string name="login">Login</string>
    <string name="not_reginsted">Not Reginsted ?</string>
    <string name="registed">Registed</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="already_registed">Already Registed</string>
    <string name="register">Register</string>
    <string name="for_login">For Login</string>
    <string name="Login">Login</string>
    <string name="btnRegister">Register</string>
    <string name="title_activity_data_view">DataViewActivity</string>
    <string name="title_activity_add_data">AddDataActivity</string>
    <string name="appbar_scrolling_view_behavior" />


</resources>
