<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/backround"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="170dp"
     android:background="@drawable/appicon"
        android:layout_marginTop="80dp"
            />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_marginTop="100dp"
        android:background="#ffff"
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:inputType="numberPassword"

        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:hint="Password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#397A83"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_reginsted"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/txt_Registation"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/registed"
            android:textColor="#2196F3"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>